Broken display code Trying to make grid columns fixed. Everything aligns fine when the options box is not being included in a containing div that spans all the columns, however once this is included everything fucks up setting the inline-grid display value messes everything up as does the outer div. Hence the creation of a tag 'first stable' even though everything isnt done. Moved some functions around, and did a little more code cleanup as well. Documented a few functions. Wish we didnt have to redo this same project because some people cant keep their hands of other PEOPLES SHIT YOU MOTHERFUCKS.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,6 +74,7 @@ a {
 
 .cellheader {
   color:yellow;
+  background-color: black;
   padding:5px;
   text-align: center;
   font-size:1.5em;
@@ -81,6 +82,10 @@ a {
   border-color: white;
   border-style: solid;
   padding-bottom: 5px;
+  display: inline-grid;
+  /* position:sticky;
+  top:0;
+  z-index:3; */
 }
 
 
